fix: set max-width for movie/tv series posters on movie/tv series details pages to prevent overlap with overviews

--- a/src/ContentPages.css
+++ b/src/ContentPages.css
@@ -1,5 +1,6 @@
 img.Content-poster {
 	width: 30vw;
+	max-width: 540px;
 	padding: 5px;
 }
 
